# termchat

./: Cargo.toml  allinone.py  main.py  readme.md
src/: __main.rs  main.rs
web/: index.html
