[package]
name = "communicator"
version = "0.1.0"
edition = "2024"

[dependencies]

tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.20"
futures-util = "0.3"
ratatui = "0.29.0"
anyhow = "1.0.98"
crossbeam-channel = "0.5.15"
tungstenite = "0.27.0"
url = "2.5.4"

[[bin]]
name = "server"
path = "src/bin/server.rs"

[[bin]]
name = "client"
path = "src/bin/client.rs"
